--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,14 @@ input, select, textarea{
   border-radius: 8px;
 }
 
+body, html {
+  height: 100dvh;
+}
 body {
   font-family: 'Space Mono', monospace;
   background-color: var(--body-bg);
   transition: background-color 0.5s ease-in-out;
-  overflow-y:hidden;
 }
-
-
 
 button {
   border: none;
@@ -47,9 +47,7 @@ a {
 
 nav {
   position: relative;
-  overflow: hidden;
 }
-
 
 nav a {
   color: var(--greetings-text-color, var(--body-text));
@@ -62,7 +60,6 @@ nav a {
   margin: 0 15px;
   transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
-
 
 nav a.home {
   float: left;
@@ -95,20 +92,20 @@ a {
   text-decoration: none;
   font-weight: 700;
   position: relative;
-  
+
 }
 
 a::before {
-    content: '';
-    background-color: var(--greetings-text-color, var(--body-text));
-    position: absolute;
-    left: 0;
-    bottom: 0px;
-    width: 100%;
-    height: 3px;
-    z-index: -1;
-    transition: all .3s ease-in-out;
-  }
+  content: '';
+  background-color: var(--greetings-text-color, var(--body-text));
+  position: absolute;
+  left: 0;
+  bottom: 0px;
+  width: 100%;
+  height: 3px;
+  z-index: -1;
+  transition: all .3s ease-in-out;
+}
 
 a:hover::before {
   bottom: 0;
@@ -121,8 +118,8 @@ a:hover::before {
   justify-content: center;
   position:relative;
   background-size:cover;
+  padding: 3rem 0;
   background-position: center;
-  height:300px;
 }
 
 .header-text h2  {
@@ -164,67 +161,36 @@ a:hover::before {
   transform: translateX(85%);
 }
 
-
-.centered {
-  text-align: center;
-  color: #ffffff;
-  font-family: 'Space Mono', monospace;
-  font-size: x-large;
-  font-weight: 400;
-  line-height: normal;
-}
-
 .w-6 {
   width: 20px;
   height: 20px;
 }
-.screen{
-  height: 100dvh;
-}
+
 .profile-container {
   display: flex;
-  height: 100dvh;
+  flex: 1;
 }
+
 .profile {
-  width: 100%;
+  display: flex;
+  flex: 1 1 0;
+  filter: grayscale(100%);
   cursor: pointer;
-  filter: grayscale(100%); 
-  transition: all 0.5s ease-out; 
-  height: 100%;
-  display: inline;
-  position: relative;
-}
-.harddisk {
-  background: url('../img/Chadisk_img.png'); 
-  background-repeat: no-repeat;
-  background-size: contain;
-  
-  
-}
-.peak {
-  background-image: url('../img/Peak_img.jpeg');
-  background-repeat: no-repeat;
-  background-size: contain;
 }
 
-.tong {
-  background: url('../img/Tong_img.jpg');
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.harddisk:hover,.tong,.peak{
-  .centered{
-    opacity: 0;
-    transition: opacity 0.5s; 
-  }
+.profile img{
+  max-width: 100%;
+  display: block;
+  pointer-events: none;
 }
 .description {
   display: none;
   position: absolute;
   z-index: 3;
+  pointer-events: none;
   color: white;
   padding: var(--input-padding);
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  top: 0;
 }
 
